[package]
name = "questplus"
version = "0.1.0"
authors = ["Tetsu Takizawa <tetsu.takizawa5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
ndarray-stats = "0.4.0"
num = "0.3.1"
statrs = "0.13.0"
thiserror = "1.0.23"
